reference_circuit.ipynb: Added simulator circuit

--- a/code/reference_circuit.ipynb
+++ b/code/reference_circuit.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "2641e432",
+   "metadata": {},
+   "source": [
+    "Previous notebooks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "2b89378e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run IBM_runtime_setup.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b2b8be2c",
    "metadata": {},
    "source": [
@@ -10,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "5fa69607",
    "metadata": {},
    "outputs": [],
@@ -19,7 +37,8 @@
     "import numpy as np\n",
     "from qiskit.quantum_info import Statevector\n",
     "from qiskit import QuantumCircuit\n",
-    "from qiskit.circuit.library import UnitaryGate"
+    "from qiskit.circuit.library import UnitaryGate\n",
+    "from qiskit_aer import AerSimulator"
    ]
   },
   {
@@ -97,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "03933593",
    "metadata": {},
    "outputs": [],
@@ -113,8 +132,64 @@
     "    qc = QuantumCircuit(num_qubits)\n",
     "    qc.append(gate, qc.qubits)\n",
     "\n",
-    "    return qc"
+    "    compiled_qc = pm.run(qc)\n",
+    "    circuit_depth = compiled_qc.depth()\n",
+    "    print(f\"Circuit depth: {circuit_depth}\")\n",
+    "\n",
+    "    return compiled_qc\n",
+    "\n",
+    "def reference_circuit_on_simulator(matrix):\n",
+    "    num_qubits = int(np.log2(len(matrix)))\n",
+    "\n",
+    "    # put matrix into a UnitaryGate\n",
+    "    gate = UnitaryGate(matrix)\n",
+    "\n",
+    "    # create circuit\n",
+    "    qc = QuantumCircuit(num_qubits)\n",
+    "    qc.append(gate, qc.qubits)\n",
+    "    qc.measure_all()\n",
+    "\n",
+    "    print(qc)\n",
+    "    shots = 1000\n",
+    "    simulator = AerSimulator(method='statevector')\n",
+    "    job = simulator.run(qc, shots=shots)\n",
+    "    result = job.result()\n",
+    "    counts = result.get_counts()\n",
+    "    print(f\"Counts: {counts}\")\n",
+    "    return counts"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acad4f51",
+   "metadata": {},
+   "source": [
+    "Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b8a2bae3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#GHZ = np.array([1, 0, 0, 0, 0, 0, 0, 1]) / np.sqrt(2)\n",
+    "#GHZ_evolve_matrix = householder_unitary(GHZ)\n",
+    "#qc_ghz = create_reference_circuit(GHZ_evolve_matrix)\n",
+    "#print(qc_ghz)\n",
+    "#qc_ghz.decompose().draw('mpl', scale=0.1)\n",
+    "\n",
+    "#qc_ghz_sim = reference_circuit_on_simulator(GHZ_evolve_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "277802f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
