TO DO: modify instruction of circuit

--- a/code/reference_circuit.ipynb
+++ b/code/reference_circuit.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2b89378e",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "5fa69607",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "73010e22",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
     "U = householder_unitary(psi)\n",
     "\n",
     "# Print the result\n",
-    "print_matrix(U)"
+    "#print_matrix(U)"
    ]
   },
   {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "03933593",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "b8a2bae3",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "QPRGA",
+   "display_name": "test_venv",
    "language": "python",
    "name": "python3"
   },
