--- a/code/IBM_runtime_setup.ipynb
+++ b/code/IBM_runtime_setup.ipynb
@@ -55,7 +55,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "QPRGA",
+   "display_name": "test_venv",
    "language": "python",
    "name": "python3"
   },
