--- a/code/generic_optimizer_functions.ipynb
+++ b/code/generic_optimizer_functions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "86a07f10",
    "metadata": {},
    "outputs": [
@@ -18,7 +18,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19859/854499027.py:1: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. Open Plan users should migrate now.  All other users should review the migration guide (https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp)to learn when to migrate.\n",
+      "/tmp/ipykernel_20808/854499027.py:1: DeprecationWarning: The \"ibm_quantum\" channel option is deprecated and will be sunset on 1 July. After this date, \"ibm_cloud\", \"ibm_quantum_platform\", and \"local\" will be the only valid channels. Open Plan users should migrate now.  All other users should review the migration guide (https://quantum.cloud.ibm.com/docs/migration-guides/classic-iqp-to-cloud-iqp)to learn when to migrate.\n",
       "  runtime_service_Jiri = QiskitRuntimeService(\n"
      ]
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "de9c7699",
    "metadata": {},
    "outputs": [
@@ -184,18 +184,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "[]\n",
+      "Circuit depth: 123\n",
+      "[['cz', 88, 89], ['cz', 88, 89], ['cz', 89, 90], ['cz', 89, 90], ['cz', 88, 89], ['cz', 90, 89], ['cz', 88, 89], ['cz', 90, 89], ['cz', 90, 89], ['cz', 90, 89], ['cz', 88, 89], ['cz', 88, 89], ['cz', 89, 90], ['cz', 89, 90], ['cz', 88, 89], ['cz', 89, 90], ['cz', 88, 89], ['cz', 88, 89], ['cz', 88, 89], ['cz', 89, 90], ['cz', 89, 90], ['cz', 88, 89], ['cz', 88, 89], ['cz', 88, 89], ['cz', 90, 89], ['cz', 88, 89], ['cz', 90, 89], ['cz', 88, 89], ['cz', 90, 89], ['cz', 90, 89], ['cz', 90, 89], ['cz', 88, 89], ['cz', 88, 89]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_20808/529739650.py:15: DeprecationWarning: Treating CircuitInstruction as an iterable is deprecated legacy behavior since Qiskit 1.2, and will be removed in Qiskit 3.0. Instead, use the `operation`, `qubits` and `clbits` named attributes.\n",
+      "  population.append([gate[0].name, gate[1][0]._index, gate[1][1]._index if len(gate[1]) > 1 else None])\n",
+      "/tmp/ipykernel_20808/529739650.py:16: DeprecationWarning: Treating CircuitInstruction as an iterable is deprecated legacy behavior since Qiskit 1.2, and will be removed in Qiskit 3.0. Instead, use the `operation`, `qubits` and `clbits` named attributes.\n",
+      "  indicies_used.add(gate[1][0]._index)\n",
+      "/tmp/ipykernel_20808/529739650.py:17: DeprecationWarning: Treating CircuitInstruction as an iterable is deprecated legacy behavior since Qiskit 1.2, and will be removed in Qiskit 3.0. Instead, use the `operation`, `qubits` and `clbits` named attributes.\n",
+      "  if len(gate[1]) > 1:\n",
+      "/tmp/ipykernel_20808/529739650.py:18: DeprecationWarning: Treating CircuitInstruction as an iterable is deprecated legacy behavior since Qiskit 1.2, and will be removed in Qiskit 3.0. Instead, use the `operation`, `qubits` and `clbits` named attributes.\n",
+      "  indicies_used.add(gate[1][1]._index)\n"
      ]
     },
     {
      "ename": "NameError",
-     "evalue": "name 'np' is not defined",
+     "evalue": "name 'indecies_used' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(population)\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m#print(population)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m GHZ = \u001b[43mnp\u001b[49m.array([\u001b[32m1\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m]) / np.sqrt(\u001b[32m2\u001b[39m)\n\u001b[32m      6\u001b[39m GHZ_evolve_matrix = householder_unitary(GHZ)\n\u001b[32m      7\u001b[39m qc_ghz = create_reference_circuit(GHZ_evolve_matrix)\n",
-      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m     20\u001b[39m         population.pop()\n\u001b[32m     22\u001b[39m \u001b[38;5;28mprint\u001b[39m(population)\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m NUM_QUBITS == \u001b[38;5;28mlen\u001b[39m(\u001b[43mindecies_used\u001b[49m)\n\u001b[32m     24\u001b[39m mapped_index = \u001b[38;5;28msorted\u001b[39m(\u001b[38;5;28mlist\u001b[39m(indicies_used))\n\u001b[32m     25\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(population)):\n",
+      "\u001b[31mNameError\u001b[39m: name 'indecies_used' is not defined"
      ]
     }
    ],
@@ -222,7 +238,7 @@
     "        population.pop()\n",
     "     \n",
     "print(population)\n",
-    "assert NUM_QUBITS == len(indecies_used)\n",
+    "assert NUM_QUBITS == len(indicies_used)\n",
     "mapped_index = sorted(list(indicies_used))\n",
     "for i in range(len(population)):\n",
     "    population[i][1] = mapped_index.index(population[i][1])\n",
